examples/ok/t_rnd_simulate_assert_auto.zc
../all/t_rnd_simulate_assert_auto.zc