examples/fail/assm_ddh_dlin.zc
../all/assm_ddh_dlin.zc